# alphaPredict

./: .gitignore  .lgtm.yml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/: CONTRIBUTING.md
.github/workflows/: CI.yaml
alphaPredict/: __init__.py  _version.py  alpha.py  alpha_exceptions.py
alphaPredict/backend/: alpha_graph.py  alpha_tools.py  encode_sequence.py  parrot_alpha.py
alphaPredict/backend/networks/: alpha_fold_networkV1.pt  alpha_fold_networkV2.pt  alpha_fold_networkV2_hs20_nL2_200e_beta.pt  alpha_fold_networkV2_hs20_nL2_200e_beta2.pt  alpha_fold_networkV2_hs20_nL2_200e_beta4.pt  alpha_fold_networkV2_hs20_nL2_200e_beta5.pt  alpha_fold_networkV3_hs20_nL2_1000e_beta3.pt  alpha_fold_networkV4_hs20_nL2_200e_all_prot.pt  alpha_fold_networkV5_hs40_nL5_200e_all_prot.pt  alpha_fold_networkV6_hs40_nL2_200e_all_prot.pt  beta_network.pt
alphaPredict/tests/: test_alphaPredict.py
devtools/: README.md
docs/: Makefile  README.md  api.rst  conf.py  getting_started.rst  index.rst  make.bat
