[build-system]

# delete cython/numpy if not needed
requires = ["setuptools>=61", "versioningit~=2.0"]
build-backend = "setuptools.build_meta"


# define project info
[project]
name = "alphaPredict"
dynamic = ["version"]
description = "alphaPredict: A predictor of AlphaFold2 confidence scores"
authors = [
    {name = "Ryan Emenecker", email = "remenecker@wustl.edu"}
]
license = {text = "MIT"}
readme = "README.md"  
requires-python = ">=3.8"

# add in as needed  
dependencies = [      
    "numpy",
    "matplotlib",
	"torch",
]

[project.optional-dependencies]
test = [
  "pytest>=6.1.2",
]

[tool.setuptools]
zip-safe = false
include-package-data = true 

[tool.setuptools.packages.find]
namespaces = true
where = ["."]
include = ["alphaPredict", "alphaPredict.*"]  # Discover all sub-packages inside the main package

[tool.setuptools.package-data]
alphaPredict = [
    "py.typed"
]

[tool.versioningit]
default-version = "1+unknown"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.vcs]
# The method key:
method = "git"  # <- The method name
# Parameters to pass to the method:
match = ["*"]
default-tag = "1.0.0"

[tool.versioningit.write]
file = "alphaPredict/_version.py"